[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dex-client-oklink"
version = "0.1.0"
description = "OKLink reverse client for browser-backed explorer APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Research Client Maintainers" }]
dependencies = ["httpx>=0.27", "curl_cffi>=0.7"]
keywords = ["crypto", "explorer", "reverse-engineered", "oklink"]
classifiers = ["Programming Language :: Python :: 3", "Typing :: Typed"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/bigidulka/dex-client-oklink"
Documentation = "https://bigidulka.github.io/dex-client-oklink/"
Repository = "https://github.com/bigidulka/dex-client-oklink"

[tool.hatch.build.targets.wheel]
packages = ["src/dex_client_oklink"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
